# qtphotobox

./: CMakeLists.txt  README.md  photobooth-rewrite.cxx  photobooth-rewrite.h  photobooth-rewrite.qrc  qtphotobox.cxx  qtphotobox.h  qtphotobox.qrc  settingseditor.cxx  settingseditor.h
camera/: camera_dummy.cxx  camera_dummy.h  camera_generic.cxx  camera_generic.h  camera_generic_surface.cxx  camera_generic_surface.h  camera_gphoto2.cxx  camera_gphoto2.h  camera_interface.cxx  camera_interface.h  pbcamera.cxx  pbcamera.h
cmake/: FindGPHOTO2.cmake  FindLibUSB.cmake
config/: canoneos500d.cfg  d3200.cfg
gpio/: gpioWorker.cxx  gpioWorker.h
gui/: archivewidget.cxx  archivewidget.h  archivewidget.ui  assemblewidget.cxx  assemblewidget.h  assemblewidget.ui  capturewidget.cxx  capturewidget.h  capturewidget.ui  countdownwidget.cxx  countdownwidget.h  countdownwidget.ui  errorwidget.cxx  errorwidget.h  errorwidget.ui  greeterwidget.cxx  greeterwidget.h  greeterwidget.ui  iconlistmodel.cxx  iconlistmodel.h  idlewidget.cxx  idlewidget.h  idlewidget.ui  initwidget.cxx  initwidget.h  initwidget.ui  passwordwidget.cxx  passwordwidget.h  passwordwidget.ui  picturedetailwidget.cxx  picturedetailwidget.h  picturedetailwidget.ui  postprocesswidget.cxx  postprocesswidget.h  postprocesswidget.ui  reviewwidget.cxx  reviewwidget.h  reviewwidget.ui  screensaver.cxx  screensaver.h  (+19 more)
gui/styles/: dark-1024x600-touch.qss  dark-1024x600.qss  dark-800x480.qss  dark-800x600.qss  pastel-1024x600.qss  pastel-800x480.qss  pastel-800x600.qss
printer/: printJob.cxx  printJob.h  printer.cxx  printer.h  printer_cups.cxx  printer_cups.h  printer_interface.cxx  printer_interface.h  printer_selphy.cxx  printer_selphy.h  printer_selphyusb.cxx  printer_selphyusb.h
settings/: settings.cxx  settings.h
statemachine/: statemachine.cxx  statemachine.h
storage/: storageManager.cxx  storageManager.h
translations/: english.ts  german.ts  settings_english.ts  settings_german.ts
worker/: curlWorker.cxx  curlWorker.h  pictureTask.cxx  pictureTask.h  pictureWorker.cxx  pictureWorker.h  postprocessTask.cxx  postprocessTask.h  postprocessWorker.cxx  postprocessWorker.h  showWorker.cxx  showWorker.h  worker.h
